RTE scrollbar fix. (#679)

--- a/packages/rich-text-editor/src/rte-old/components/RichTextEditor/style.scss
+++ b/packages/rich-text-editor/src/rte-old/components/RichTextEditor/style.scss
@@ -47,6 +47,7 @@
 	cursor: text;
 	font-size: var(--ee-font-size-big);
 	margin: 0;
+	overflow-x: hidden;
 
 	&__root {
 		border: none;
